[package]
name = "wad_reader"
author = "Nanoteck137"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
mime = { git = "https://github.com/nanoteck137/mime" }

