[package]
name = "wad_reader"
authors = ["Nanoteck137 <patrik.millvik@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.5"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
clap = { version = "4.0.9", features = ["derive"] }
